--- a/Redactify/templates/500.html
+++ b/Redactify/templates/500.html
@@ -23,7 +23,7 @@
         {% endif %}
         {% endwith %}
         <p class="text-muted mt-3">Please try again later, or return home.</p>
-        <a href="{{ url_for('index') }}" class="btn btn-primary mt-3">Go Back Home</a>
+        <a href="{{ url_for('main.index') }}" class="btn btn-primary mt-3">Go Back Home</a>
     </div>
 </div>
 {% endblock %}
